--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
         "bootstrap": "^4.4.1",
+        "express": "^4.17.1",
+        "express-favicon": "^2.0.1",
         "jquery": "^3.5.0",
+        "path": "^0.12.7",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -20,7 +23,7 @@
         "typescript": "^3.8.3"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "node server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
