--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "typescript": "^3.8.3"
     },
     "scripts": {
-        "start": "node server.js",
+        "start": "react-scripts start",
+        "server": "node server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
