--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "express": "^4.17.1",
         "express-favicon": "^2.0.1",
         "jquery": "^3.4.1",
+        "moment": "^2.25.3",
         "path": "^0.12.7",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
@@ -26,6 +28,7 @@
     "scripts": {
         "start": "node server.js",
         "dev": "react-scripts start",
+        "server": "node server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
